Fix spacing between icon navigation and main content

--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0em 0em 5em 0em;
+}
+
 .container-fluid > a {
     font-size: 3.4em;
 }
